<resources>
    <string name="app_name">GitHubApp</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <!--Profile-->
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="options">Options</string>
    <string name="repositories">Repositories</string>
    <string name="feed">Feed</string>
    <string name="stars">Stars</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">Name</string>
    <string name="bio">Bio</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <!--Search-->
    <string name="search_hint">Search repository or user</string>
    <string name="results">Results</string>
    <!--Repo Details-->
    <string name="info">Info</string>
    <string name="no_search_results">No search results</string>
</resources>
