<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/bkg_gray_light"
                app:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher"
                        app:layout_constraintBottom_toTopOf="@+id/tv_bio"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:maxLines="1"
                        android:text="@string/login"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/iv_avatar"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="JohnAppleseedItis" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/user_name"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_bio"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/iv_avatar"
                        app:layout_constraintTop_toBottomOf="@id/tv_username"
                        tools:text="FirstName" />

                    <TextView
                        android:id="@+id/tv_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingBottom="8dp"
                        android:text="@string/bio"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
                        tools:text="My bio" />

                    <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_company_black_24dp"
                        android:drawablePadding="4dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/company"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_bio"
                        tools:text="ITIS" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:drawableStart="@drawable/ic_location_on_black_24dp"
                        android:drawablePadding="4dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/location"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/tv_company"
                        app:layout_constraintTop_toBottomOf="@id/tv_bio"
                        tools:text="Kazan" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/bkg_gray_light"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_followers"
                        style="@style/ProfileOptionsStyle"
                        android:text="@string/followers" />

                    <TextView
                        android:id="@+id/tv_following"
                        style="@style/ProfileOptionsStyle"
                        android:text="@string/following" />

                    <TextView
                        android:id="@+id/tv_feed"
                        style="@style/ProfileOptionsStyle"
                        android:text="@string/feed" />

                    <TextView
                        android:id="@+id/tv_stars"
                        style="@style/ProfileOptionsStyle"
                        android:text="@string/stars" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_repos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/bkg_gray_light"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repositories"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_repo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_repo" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/sign_out"
                android:textAllCaps="true"
                android:textColor="@color/s_primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>
</androidx.core.widget.NestedScrollView>